# ray-tracing

./: CMakeLists.txt  LICENSE  README.md  windows_build.bat
.github/workflows/: windows-ci.yml
__test__/: Test_Vector3.cpp  Test_Vector3.h
include/: Camera.h  Canvas.h  Ray.h  Renderer.h  pch.h
include/math/: Formula.h  Utils.h  Vector3.h
include/platform/: LinuxWindow.h  Window.h  WindowsWindow.h
include/renderer/: Interval.h  Material.h  Renderer.h  RendererList.h  RendererWrapper.h  Sphere.h
scripts/: windows_build_debug.bat  windows_build_release.bat
src/: Camera.cpp  Canvas.cpp  Ray.cpp  main.cpp
src/platform/: LinuxWindow.cpp  Window.cpp  WindowsWindow.cpp
src/renderer/: Interval.cpp  RendererList.cpp  Sphere.cpp
